fixes off-center positions of counter across browsers

--- a/themes/atchai/static/src/sass/modules/_post.sass
+++ b/themes/atchai/static/src/sass/modules/_post.sass
@@ -116,12 +116,14 @@
                 background: url('/img/Bullet.svg')
                 background-size: 100%
                 background-repeat: no-repeat
-                background-position: 0px 2px
+                background-position: center center
                 padding: 14px
+                width: 42px
+                height: 42px
                 margin-right: 10px
                 color: white
                 font-family: sans-serif
-                font-size: 15px
+                font-size: 14px
             
     ul
         list-style: disc url('/img/Bullet-Ul.svg')
